# thecrawler

./: .gitignore  Cargo.toml  README.md
migrations/: 001_init.sql
src/: crawler.rs  db.rs  main.rs  utils.rs
